--- a/src/components/Question/styles.scss
+++ b/src/components/Question/styles.scss
@@ -8,6 +8,20 @@
     margin-top: 8px;
   }
 
+  &.hilighted {
+    background: #f4f0ff;
+    border: 1px solid #835afd;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.04);
+
+    footer .user-info span {
+      color: #29292e;
+    }
+  }
+
+  &.answered {
+    background: #dbdcdd
+  }
+
   p {
     color: #292929;
   }
@@ -33,6 +47,11 @@
         color: #737380;
         font-size: 14px;
       }
+    }
+
+    > div {
+      display: flex;
+      gap: 16px;
     }
 
     button {
